k8s/traefik/traefik-admingui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-staging-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - host: traefik-staging.lingapos.com
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
        path: /
